Enhance hero section with text and image
Added a hero section with content and image.

--- a/index.html
+++ b/index.html
@@ -67,10 +67,18 @@
 </header>
 
 <section class="hero" id="hero">
-    <h1>Amit</h1>
-    <p>Master’s Student at IIT Gandhinagar | 5G NR Protocol Developer | Python & C++ Enthusiast</p>
+    <div class="hero-content">
+        <div class="hero-text">
+            <h1>Amit</h1>
+            <p>Master’s Student at IIT Gandhinagar | 5G NR Protocol Developer | Python & C++ Enthusiast</p>
+        </div>
+        <div class="hero-image">
+            <img src="amit.jpg" alt="Amit Photo">
+        </div>
+    </div>
     <div class="scroll-down">⌄</div>
 </section>
+
 
 <section id="about">
     <h2>About Me</h2>
