--- a/index.html
+++ b/index.html
@@ -8,46 +8,87 @@
     <style>
         /* Reset & base */
         * { margin:0; padding:0; box-sizing:border-box; }
-        body { font-family: 'Inter', sans-serif; line-height:1.6; color:#111; background:#fff; scroll-behavior:smooth; }
-        a { text-decoration:none; color: inherit; }
+        body {
+            font-family: Arial, sans-serif;
+            line-height:1.6;
+            color:#eee;
+            background:#111; /* Dark background */
+            scroll-behavior:smooth;
+            margin:0;
+        }
 
-        /* Header */
-        header { position:fixed; top:0; width:100%; background:#fff; padding:1rem 2rem; display:flex; justify-content:space-between; align-items:center; box-shadow:0 2px 8px rgba(0,0,0,0.05); z-index:1000; }
-        header nav a { margin-left:2rem; font-weight:600; cursor:pointer; transition:0.3s; }
+        header {
+            position:fixed;
+            top:0;
+            width:100%;
+            text-align:center;
+            background:#111;
+            color:#eee;
+            padding:1rem 2rem;
+            display:flex;
+            justify-content:space-between;
+            align-items:center;
+            box-shadow:0 2px 8px rgba(0,0,0,0.5);
+            z-index:1000;
+        }
+
+        header nav a {
+            margin-left:2rem;
+            font-weight:600;
+            cursor:pointer;
+            transition:0.3s;
+            color:#eee;
+        }
+
         header nav a:hover { color:#0071e3; }
 
+        section { padding:6rem 2rem; max-width:1200px; margin:0 auto; }
+        h2 { font-size:2rem; margin-bottom:2rem; font-weight:800; text-align:center; color:#fff; }
+
         /* Hero Section */
-        .hero { height:100vh; display:flex; flex-direction:column; justify-content:center; align-items:center; text-align:center; background:#f7f7f7; padding:0 2rem; }
-        .hero h1 { font-size:3rem; font-weight:800; margin-bottom:1rem; }
-        .hero p { font-size:1.25rem; color:#555; max-width:600px; }
+        .hero { height:100vh; display:flex; flex-direction:column; justify-content:center; align-items:center; text-align:center; padding:0 2rem; background:#111; }
+        .hero-text h1 { font-size:3rem; font-weight:800; margin-bottom:1rem; }
+        .hero-text p { font-size:1.25rem; color:#ccc; max-width:600px; }
         .scroll-down { margin-top:3rem; font-size:2rem; color:#0071e3; animation: bounce 2s infinite; }
         @keyframes bounce { 0%,20%,50%,80%,100%{transform:translateY(0);}40%{transform:translateY(10px);}60%{transform:translateY(5px);} }
 
-        /* Sections */
-        section { padding:6rem 2rem; max-width:1200px; margin:0 auto; }
-        h2 { font-size:2rem; margin-bottom:2rem; font-weight:800; text-align:center; }
+        .hero-content {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: center;
+            gap: 3rem;
+            text-align: left;
+        }
 
-        /* Education */
-        .education .edu-card { background:#f7f7f7; padding:1.5rem; border-radius:12px; margin-bottom:1.5rem; box-shadow:0 2px 12px rgba(0,0,0,0.05); }
-        .edu-card h3 { font-weight:700; margin-bottom:0.5rem; }
-        .edu-card p { color:#555; }
+        .hero-text { max-width: 600px; }
 
-        /* Experience / Projects */
-        .exp-card, .project-card { background:#f7f7f7; padding:1.5rem; border-radius:12px; margin-bottom:1.5rem; box-shadow:0 2px 12px rgba(0,0,0,0.05); transition: transform 0.3s, box-shadow 0.3s; }
-        .exp-card:hover, .project-card:hover { transform: translateY(-5px); box-shadow:0 8px 20px rgba(0,0,0,0.1); }
-        .exp-card h3, .project-card h3 { font-weight:700; margin-bottom:0.5rem; }
-        .exp-card p, .project-card p { color:#555; margin-bottom:0.5rem; }
+        .hero-image img {
+            width: 250px;
+            height: 250px;
+            border-radius: 50%;
+            object-fit: cover;
+            border: 4px solid #0071e3;
+            box-shadow: 0 10px 30px rgba(0,0,0,0.7);
+        }
+
+        /* Education / Experience / Projects */
+        .edu-card, .exp-card, .project-card { background:#1c1c1c; color:#eee; padding:1.5rem; border-radius:12px; margin-bottom:1.5rem; box-shadow:0 2px 12px rgba(0,0,0,0.5); transition: transform 0.3s, box-shadow 0.3s; }
+        .edu-card h3, .exp-card h3, .project-card h3 { font-weight:700; margin-bottom:0.5rem; }
+        .edu-card p, .exp-card p, .project-card p { color:#ccc; margin-bottom:0.5rem; }
+        .exp-card:hover, .project-card:hover { transform: translateY(-5px); box-shadow:0 8px 20px rgba(0,0,0,0.7); }
 
         /* Skills */
         .skills { display:flex; flex-wrap:wrap; justify-content:center; gap:1rem; }
-        .skill { background:#f0f0f0; padding:0.5rem 1rem; border-radius:50px; font-weight:600; }
+        .skill { background:#333; padding:0.5rem 1rem; border-radius:50px; font-weight:600; color:#eee; }
 
         /* Contact */
         .contact a { display:inline-block; margin-right:2rem; margin-bottom:1rem; font-weight:600; color:#0071e3; }
 
         /* Responsive */
         @media(max-width:768px){
-            .hero h1 { font-size:2.2rem; }
+            .hero-content { flex-direction: column; text-align: center; }
+            .hero-image img { width:200px; height:200px; }
             header nav a { margin-left:1rem; }
         }
     </style>
@@ -78,7 +119,6 @@
     </div>
     <div class="scroll-down">⌄</div>
 </section>
-
 
 <section id="about">
     <h2>About Me</h2>
