--- a/index.html
+++ b/index.html
@@ -96,8 +96,7 @@
 <body>
 
 <header>
-    <div class="logo"><strong>Amit</strong></div>
-    <nav>
+        <nav>
         <a href="#about">About</a>
         <a href="#education">Education</a>
         <a href="#experience">Experience</a>
@@ -110,8 +109,8 @@
 <section class="hero" id="hero">
     <div class="hero-content">
         <div class="hero-text">
-            <h1>Amit</h1>
-            <p>Master’s(M. Tech.)  Student at IIT Gandhinagar | 5G NR Protocol Developer | Wireless Communication | Python & C++ Enthusiast</p>
+            <h1>Amit Kumar Yadav</h1>
+            <p>Master’s(M. Tech.) Student at IIT Gandhinagar | 5G NR Protocol Developer | Wireless Communication | Python & C++ Enthusiast</p>
         </div>
         <div class="hero-image">
             <img src="amit.jpg" alt="Amit Photo">
