Update educational qualification in hero section

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     <div class="hero-content">
         <div class="hero-text">
             <h1>Amit Kumar Yadav</h1>
-            <p>Master’s(M. Tech.) Student at IIT Gandhinagar | 5G NR Protocol Developer | Wireless Communication | Python & C++ Enthusiast</p>
+            <p>Master’s(M. Tech. EE ) Student at IIT Gandhinagar | 5G NR Protocol Developer | Wireless Communication | Python & C++ Enthusiast</p>
         </div>
         <div class="hero-image">
             <img src="amit.jpg" alt="Amit Photo">
