Add logo div to header section

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
 
 <header>
+    <div class="logo"><strong></strong></div>
     <nav>
         <a href="#about">About</a>
         <a href="#education">Education</a>
